Env Variables to Local

--- a/frontWeb/public/index.html
+++ b/frontWeb/public/index.html
@@ -43,7 +43,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Sportrip</title>
+    <title>Travel Agency</title>
   </head>
 
   <body>
